# NF1_2D_organoid_profiling_pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  cellprofiler_env.yml  gold_standard_call.sh  preprocessing_env.yml  pyproject.toml  r_env.yml  uv_setup.sh
0.download_data/: README.md  update_and_visualize.sh  update_file_structure.ipynb
0.download_data/metadata/: NF0014_platemap.csv  platemap_vis.ipynb
0.download_data/scripts/: update_file_structure.py
0.preprocessing_data/: local_preprocessing.sh
0.preprocessing_data/notebooks/: 0.patient_specific_preprocessing.ipynb  1.update_file_structure.ipynb  2.make_z-stack_images.ipynb
0.preprocessing_data/scripts/: 1.update_file_structure.py
00.download_data/: README.md  update_and_visualize.sh  update_file_structure.ipynb
00.download_data/metadata/: NF0014_platemap.csv  platemap_vis.ipynb
00.download_data/notebooks/: platemap_vis.ipynb
00.download_data/scripts/: platemap_vis.r  update_file_structure.py
1.max_projection/: 0.check_incomplete_sets.ipynb  1.cp_max_projection.ipynb  README.md  check_and_max_proj.sh  max_proj.cppipe
1.max_projection/notebooks/: 0.cp_max_projection.ipynb  1.get_the_middle_slice.ipynb  2.get_the_middle_N_slice_max_proj.ipynb
2.illumination_correction/: HPC_child_ic.sh  HPC_parent_ic.sh  README.md  cp_illum_correction.ipynb  illum.cppipe  run_ic.sh
3.cell_segmentation/: HPC_child_segmentation.sh  HPC_grandparent_segmentation.sh  HPC_parent_segmentation.sh  child_segmentation.sh  run_segmentation.sh
3.feature_extraction/: HPC_child_featurization.sh  HPC_featurization.sh  HPC_grandparent_featurization.sh  HPC_parent_featurization.sh  README.md  analysis.cppipe  cp_analysis.ipynb  run_analysis.sh  run_featurization.sh  run_local_featurization.sh
3.feature_extraction/loadfiles/: loadfile.txt  (+1 more)
4.preprocess_features/: 0.convert_cytotable.ipynb  1.single_cell_processing.ipynb  run_preprocessing.sh
5.analyze_data/: 0.generate_UMAP_emeddings.ipynb  1.vis_UMAP.ipynb  run_eda.sh
environments/: cellprofiler_env.yml  run_CP_docker.sh  segmentation.yml
src/cp_parallel/: pyproject.toml
src/cp_parallel/src/: cp_parallel.py
utils/: cp_parallel.py  parsable_args.py  pyproject.toml
utils/src/: cp_parallel.py
utils/src/image_analysis_2D/cp_utils/: cp_parallel.py  cp_utils.py
utils/src/image_analysis_2D/featurization_utils/: resource_profiling_utils.py
utils/src/image_analysis_2D/file_utils/: arg_parsing_utils.py  file_checking.py  file_reading.py  notebook_init_utils.py  preprocessing_funcs.py  read_in_channel_mapping.py
utils/src/image_analysis_2D/image_utils/: image_utils.py
utils/src/image_analysis_2D/segmentation_utils/: segmentation_processing.py
utils/src/image_analysis_2D/visualization_utils/: animation_utils.py
(+50 files in other folders)
