[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
index-url = "https://download.pytorch.org/whl/cu118"
extra-index-url = ["https://pypi.org/simple"]
[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[project]
name = "nf1-2-organoid-profiling-pipeline"
version = "0.1.0"
description = "NF1 2D organoid profiling pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.4.0",
    "cytotable>=1.1.4",
    "duckdb>=1.4.4",
    "basicpy>=1.1.0",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=6.31.0",
    "moviepy>=2.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pyarrow>=23.0.0",
    "pycytominer>=1.4.0",
    "tabulate>=0.10.0",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "tomli>=2.4.0",
    "transformers<5.0",
]


[tool.pycln]
all = true

[tool.setuptools]
packages = []
