[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cp_parallel"
version = "0.0.0"
description = "Utility package for GFF 2D organoid profiling pipeline"
requires-python = ">=3.8"
authors = [ { name = "Michael J. Lippincott"} ]
license = { text = "BSD 3-Clause License" }

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
    "ipykernel",
]

[tool.setuptools]
py-modules = [
    "cp_parallel",
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["*"]
